<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rolllayouttest_relativelayout_background"
    android:focusableInTouchMode="true" >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitStart"
        android:src="@drawable/userlogintest01_imageview_src" />

    <RelativeLayout
        android:id="@+id/relative01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_alignParentBottom="true" >

        <TextView
            android:id="@+id/text01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="40dp"
            android:clickable="true"
            android:onClick="onClick"
            android:text="@string/userlogin_scan_account"
            android:textColor="#ff0000"
            android:textSize="20dp" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="40dp"
            android:button="@drawable/userlogintest01_checkbox_select_s"
            android:text="@string/userlogin_remember_password"
            android:textColor="#ff0000"
            android:textSize="20dp" />
    </RelativeLayout>

    <Button
        android:id="@+id/btn01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/relative01"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/userlogintest01_edittext_userlogin"
        android:onClick="onClick"
        android:text="@string/userlogin_cancel"
        android:textColor="#ff0000"
        android:textSize="20dp" />

    <Button
        android:id="@+id/btn02"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/btn01"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/userlogintest01_edittext_userlogin"
        android:onClick="onClick"
        android:text="@string/userlogin_login"
        android:textColor="#ff0000"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/edittext_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/btn02"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/userlogintest01_edittext_userlogin"
        android:hint="@string/userlogin_enter_password"
        android:password="true"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/edittext_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/edittext_password"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/userlogintest01_edittext_userlogin"
        android:hint="@string/userlogin_enter_account"
        android:textSize="20dp" />

</RelativeLayout>