<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2e2e2e"
    android:orientation="vertical"
    tools:context=".HomeWatcherTest" >

    <RelativeLayout
        android:id="@+id/main_ly_titlebar"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/slidingmenutestitemright_relativelayout_titlebg" >

        <RelativeLayout
            android:id="@+id/title_btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:padding="10dp" >

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:background="@drawable/slidingmenutestitemright_relativelayout_titlesetting_s" />
        </RelativeLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginRight="14dp"
            android:src="@drawable/slidingmenutestitem_imageview_fgv" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="14dp"
            android:layout_toRightOf="@+id/title_btn_back"
            android:src="@drawable/slidingmenutestitem_imageview_fgv" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_activity_navigation"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/main_ly_toolbar"
        android:layout_below="@+id/main_ly_titlebar"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal|center_vertical" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/main_zjdh"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/slidingmenutestitemright_m_1_style" />

                <TextView
                    style="@style/SlidingMenuLayoutTest_TextView"
                    android:text="@string/title_activity_navigation" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/main_zjjy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/slidingmenutestitemright_m_2_style" />

                <TextView
                    style="@style/SlidingMenuLayoutTest_TextView"
                    android:text="@string/title_activity_help_main" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/main_zjzd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/slidingmenutestitemright_m_3_style" />

                <TextView
                    style="@style/SlidingMenuLayoutTest_TextView"
                    android:text="@string/title_activity_diagnosis_index" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal|center_vertical" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/main_zjt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/slidingmenutestitemright_m_4_style" />

                <TextView
                    style="@style/SlidingMenuLayoutTest_TextView"
                    android:text="@string/listen_main_title" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/main_zjjd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/slidingmenutestitemright_m_5_style" />

                <TextView
                    style="@style/SlidingMenuLayoutTest_TextView"
                    android:text="@string/title_activity_main" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/main_zjgef"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/slidingmenutestitemright_m_6_style" />

                <TextView
                    style="@style/SlidingMenuLayoutTest_TextView"
                    android:text="@string/title_activity_golf_index" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal|center_vertical" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/main_zjzx"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/slidingmenutestitemright_m_7_style" />

                <TextView
                    style="@style/SlidingMenuLayoutTest_TextView"
                    android:text="@string/title_activity_shopping_main" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/main_zjtj"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/slidingmenutestitemright_m_8_style" />

                <TextView
                    style="@style/SlidingMenuLayoutTest_TextView"
                    android:text="@string/title_activity_tj_main" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/main_jqqd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/slidingmenutestitemright_m_9_style" />

                <TextView
                    style="@style/SlidingMenuLayoutTest_TextView"
                    android:text="@string/title_activity_qidai_main" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/main_ly_toolbar"
        android:layout_width="match_parent"
        android:layout_height="96dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/main_ly_toolbar_bg" >

        <ImageButton
            android:id="@+id/main_ly_toolbar_centent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/main_ly_toolbar_centent" />

        <ImageButton
            android:id="@+id/main_ly_toolbar_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_toLeftOf="@+id/main_ly_toolbar_centent"
            android:background="@drawable/main_ly_toolbar_left" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="5dp"
            android:layout_toRightOf="@+id/main_ly_toolbar_centent"
            android:background="@drawable/main_ly_toolbar_right" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/main_ly_toolbar_left"
            android:layout_alignTop="@+id/main_ly_toolbar_left"
            android:layout_marginLeft="39dp"
            android:layout_marginTop="6dp"
            android:background="@drawable/main_tz_bg"
            android:gravity="center"
            android:text="0"
            android:textColor="@color/white"
            android:textSize="12sp" />
    </RelativeLayout>

</RelativeLayout>